# c-chat

./: README.md
socket-client/: CMakeLists.txt  main.c
socket-server/: CMakeLists.txt  main.c
socket-util/: CMakeLists.txt  socketutil.c  socketutil.h
